Redirecting from resetPwd to empHome instead of empWelcome

--- a/src/main/resources/templates/tempLogin.html
+++ b/src/main/resources/templates/tempLogin.html
@@ -170,7 +170,7 @@
         </div>
         <div class="form-group">
             <label for="pwd">Password</label>
-            <input type="text" id="pwd" name="pwd" required>
+            <input type="password" id="pwd" name="pwd" required>
         </div>
         <div class="button-group">
             <button type="reset" class="btn">Clear</button>
